# Intelligent_Irrigation_System

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-api.txt  requirements.txt
Data/: README.md
api/: main.py
docs/: application_form_template.md  data.md  dqn.md  lstms.md
scripts/: print_artifact_summary.py  train_dqn.py  train_lstm1.py  train_lstm2.py
scripts/data/: inspect_datasets.py
src/irrigation_ai/data/: __init__.py  load.py  sequences.py
src/irrigation_ai/models/: __init__.py  lstm_swtd.py  lstm_yield.py
src/irrigation_ai/rl/: __init__.py  dqn_agent.py  irrigation_env.py  replay_buffer.py
src/irrigation_ai/utils/: __init__.py  artifacts.py  seed.py
submitted_artifacts/export_for_form_20260325_dqn_gpu/: RUN_INFO.txt  SHA256SUMS
submitted_artifacts/export_for_form_20260325_dqn_gpu/dqn/: config.json  q_network.keras  q_target.keras  training_log.csv
submitted_artifacts/export_for_form_20260325_dqn_gpu/lstm1/: best.keras  config.json  history.csv  metrics.json  predictions.csv  scaler.joblib
submitted_artifacts/export_for_form_20260325_dqn_gpu/lstm2/: best.keras  config.json  history.csv  metrics.json  predictions.csv  scalers.joblib
tests/: conftest.py  test_sequences.py
