[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irrigation-ai"
version = "0.1.0"
description = "Intelligent irrigation system: LSTMs + DQN (report implementation)"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

